--- a/dotnet/Wulkanowy.Qr/Wulkanowy.Qr.csproj
+++ b/dotnet/Wulkanowy.Qr/Wulkanowy.Qr.csproj
@@ -5,9 +5,9 @@
         <LangVersion>8</LangVersion>
         <Title>WulkanowyQr</Title>
         <Description>Encryptor/Decryptor for Uonet+ qr code</Description>
-        <PackageProjectUrl>https://github.com/wulkanowy/qr/dotnet</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/wulkanowy/qr/tree/master/dotnet</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/wulkanowy/qr/blob/master/LICENSE</PackageLicenseUrl>
-	<RepositoryUr>https://github.com/wulkanowy/qr</RepositoryUrl>
+	    <RepositoryUrl>https://github.com/wulkanowy/qr</RepositoryUrl>
     </PropertyGroup>
 
 </Project>
